force-app/main/default/objects/zisf__ZoomTokenStorage__c/zisf__ZoomTokenStorage__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ZoomTokenStorage</label>
</CustomObject>