force-app/main/default/objects/zisf__ZoomTokenStorage__c/fields/zisf__pass__c.field-meta.xml
<CustomField>
    <fullName>zisf__pass__c</fullName>
    <description>partner password</description>
    <label>pass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>