force-app/main/default/objects/zisf__ZoomTokenStorage__c/fields/zisf__pc__c.field-meta.xml
<CustomField>
    <fullName>zisf__pc__c</fullName>
    <description>parnter code</description>
    <label>pc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>