force-app/main/default/objects/zisf__ZoomTokenStorage__c/fields/zisf__token__c.field-meta.xml
<CustomField>
    <fullName>zisf__token__c</fullName>
    <label>token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>